moved analyzer out of diagnostics